--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,17 @@
-body {
-	background-color: #232332;
-	}
+@import "scaffolding.scss";
+@import "fonts.scss";
+
+@import "blocks/container.scss";
+@import "blocks/visual-hidden.scss";
+@import "blocks/page-header";
+@import "blocks/page-footer.scss";
+@import "blocks/btn.scss";
+@import "blocks/footer-nav.scss";
+@import "blocks/index-blocks.scss";
+@import "blocks/logo.scss";
+@import "blocks/cruisers.scss";
+@import "blocks/fixies.scss";
+@import "blocks/socials.scss";
+@import "blocks/subs-and-socials.scss";
+@import "blocks/subs.scss";
+@import "blocks/socials.scss";
